--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     }
 }
 
+
 plugins {
     id 'com.android.library'
 }
@@ -53,6 +54,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation "androidx.core:core-ktx:1.3.2"
+
 
     testImplementation 'junit:junit:4.+'
 
