--- a/primer-sdk-android/src/main/AndroidManifest.xml
+++ b/primer-sdk-android/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application>
-        <activity android:name=".CheckoutSheetActivity" android:theme="@android:style/Theme.Dialog" />
+        <activity android:name=".CheckoutSheetActivity" android:theme="@style/Theme.AppCompat.CheckoutSheet" />
     </application>
 
 </manifest>
