--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.fragment:fragment:1.2.5'
     implementation "androidx.core:core-ktx:1.3.2"
 
 
