--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation('com.getbouncer:cardscan-ui:2.0.0054') {
         exclude group: 'org.jetbrains.kotlinx', module: 'kotlinx-serialization-runtime-jvm'
     }
-    implementation 'com.android.volley:volley:1.1.1'
+//    implementation 'com.android.volley:volley:1.1.1'
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1'
@@ -59,6 +59,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.fragment:fragment:1.2.5'
     implementation "androidx.core:core-ktx:1.3.2"
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
 
 
     testImplementation 'junit:junit:4.+'
