--- a/primer-sdk-android/src/main/AndroidManifest.xml
+++ b/primer-sdk-android/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application>
-        <activity android:name=".ui.CheckoutSheetActivity" android:theme="@style/Theme.AppCompat.CheckoutSheetActivity" />
+        <activity android:name=".ui.CheckoutSheetActivity" android:theme="@style/Theme.AppCompat.CheckoutSheetActivity" android:label="" />
     </application>
 
 </manifest>
