Fix bblack backgrounnd on dialog

--- a/primer-sdk-android/src/main/AndroidManifest.xml
+++ b/primer-sdk-android/src/main/AndroidManifest.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="io.primer.android">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application>
-        <activity android:name=".ui.CheckoutSheetActivity" android:theme="@style/Theme.AppCompat.CheckoutSheetActivity" android:label="" />
+        <activity
+            android:theme="@style/Theme.AppCompat.PrimerUniversalCheckout"
+            android:name=".ui.CheckoutSheetActivity"
+            android:label=""
+            />
     </application>
 
 </manifest>
