Fix Keyboard visibility + form focus

--- a/primer-sdk-android/src/main/AndroidManifest.xml
+++ b/primer-sdk-android/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application >
         <activity
             android:theme="@style/Theme.AppCompat.PrimerUniversalCheckout"
-            android:name=".ui.CheckoutSheetActivity"
+            android:name=".CheckoutSheetActivity"
             android:label=""
             android:windowSoftInputMode="adjustResize"
             />
