--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -53,9 +53,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    implementation 'androidx.fragment:fragment:1.2.5'
+    implementation 'androidx.fragment:fragment-ktx:1.2.5'
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC2'
 
 
     testImplementation 'junit:junit:4.+'
