--- a/primer-sdk-android/src/main/AndroidManifest.xml
+++ b/primer-sdk-android/src/main/AndroidManifest.xml
@@ -4,13 +4,12 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application >
+    <application>
         <activity
-            android:theme="@style/Theme.AppCompat.PrimerUniversalCheckout"
             android:name=".CheckoutSheetActivity"
             android:label=""
-            android:windowSoftInputMode="adjustResize"
-            />
+            android:theme="@style/Theme.AppCompat.PrimerUniversalCheckout"
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
