Optimize and reformat

--- a/primer-sdk-android/src/main/AndroidManifest.xml
+++ b/primer-sdk-android/src/main/AndroidManifest.xml
@@ -5,7 +5,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application>
-        <activity android:name=".WebBrowserInteropActivity" android:label="" android:theme="@android:style/Theme.NoDisplay"></activity>
+        <activity
+            android:name=".WebBrowserInteropActivity"
+            android:label=""
+            android:theme="@android:style/Theme.NoDisplay"></activity>
         <activity
             android:name=".CheckoutSheetActivity"
             android:label=""
