--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
     implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC2'
+    implementation 'com.hbb20:ccp:2.4.5'
 
 
     testImplementation 'junit:junit:4.+'
