--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 buildscript {
     ext.kotlin_version = '1.4.20-RC'
     ext.kotlin_version = "1.4.10"
+    ext.koin_version = '2.2.2'
+
     repositories {
         google()
         jcenter()
