parameterize build number

--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -1,3 +1,5 @@
+
+
 buildscript {
     repositories { jcenter() }
 
@@ -15,6 +17,32 @@ plugins {
 apply plugin: 'koin'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlinx-serialization'
+
+ext {
+    userOrganisation = 'primer-io'
+
+    bintrayRepo = 'Android'
+    bintrayName = 'io.primer.android'
+
+    publishedGroupId = 'io.primer.android'
+    libraryName = 'android'
+    artifact = 'android'
+
+    libraryDescription = 'Primer SDK for Android'
+
+    siteUrl = 'https://github.com/primer-io/primer-sdk-android'
+    gitUrl = 'https://github.com/primer-io/primer-sdk-android.git'
+
+    libraryVersion = '1.0.0-beta.3'
+
+    developerId = 'primer'
+    developerName = 'Primer Developers'
+    developerEmail = 'developers@primerapi.com'
+
+    licenseName = 'MIT'
+    licenseUrl = 'https://tldrlegal.com/license/mit-license#fulltext'
+    allLicenses = ["MIT"]
+}
 
 android {
     compileSdkVersion 30
@@ -42,6 +70,11 @@ android {
     }
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
+    buildTypes.each {
+        it.buildConfigField 'String', 'SDK_VERSION_STRING', "\"$libraryVersion\""
+        it.resValue 'string', 'SDK_VERSION_STRING', libraryVersion
     }
 }
 
@@ -83,32 +116,6 @@ repositories {
 
 subprojects {
     tasks.withType(Javadoc).all { enabled = false }
-}
-
-ext {
-    userOrganisation = 'primer-io'
-
-    bintrayRepo = 'Android'
-    bintrayName = 'io.primer.android'
-
-    publishedGroupId = 'io.primer.android'
-    libraryName = 'android'
-    artifact = 'android'
-
-    libraryDescription = 'Primer SDK for Android'
-
-    siteUrl = 'https://github.com/primer-io/primer-sdk-android'
-    gitUrl = 'https://github.com/primer-io/primer-sdk-android.git'
-
-    libraryVersion = '1.0.0-beta.2'
-
-    developerId = 'primer'
-    developerName = 'Primer Developers'
-    developerEmail = 'developers@primerapi.com'
-
-    licenseName = 'MIT'
-    licenseUrl = 'https://tldrlegal.com/license/mit-license#fulltext'
-    allLicenses = ["MIT"]
 }
 
 apply from: 'publish.gradle'
