--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -17,9 +17,9 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlinx-serialization'
 
 ext {
-    userOrganisation = 'primer-io'
+    userOrganisation = 'primer-api'
 
-    bintrayRepo = 'Android'
+    bintrayRepo = 'android'
     bintrayName = 'io.primer.android'
 
     publishedGroupId = 'io.primer.android'
@@ -33,7 +33,7 @@ ext {
 
     libraryVersion = '1.0.0-beta.5'
 
-    developerId = 'primer'
+    developerId = 'primer-api'
     developerName = 'Primer Developers'
     developerEmail = 'developers@primerapi.com'
 
