--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -88,7 +88,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
-    implementation 'androidx.fragment:fragment-ktx:1.3.0'
+    implementation 'androidx.fragment:fragment-ktx:1.3.1'
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
     implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC2'
@@ -115,4 +115,5 @@ subprojects {
     tasks.withType(Javadoc).all { enabled = false }
 }
 
+apply from: "$rootDir/config/analysis.gradle"
 apply from: 'publish.gradle'
