add webview activity to manifest

--- a/primer-sdk-android/src/main/AndroidManifest.xml
+++ b/primer-sdk-android/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
             android:label=""
             android:theme="@android:style/Theme.NoDisplay" />
 
-        <activity android:name=".WebViewActivity" />
+        <activity
+            android:name=".WebViewActivity"
+            android:label=""/>
     </application>
 
 </manifest>
