webview theme: no toolbar

--- a/primer-sdk-android/src/main/AndroidManifest.xml
+++ b/primer-sdk-android/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
 
         <activity
             android:name=".WebViewActivity"
+            android:theme="@style/Theme.AppCompat.WebView"
             android:label=""/>
     </application>
 
