setup test dependencies

--- a/config/android-common.gradle
+++ b/config/android-common.gradle
@@ -3,11 +3,13 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArgument("runnerBuilder", "de.mannodermaus.junit5.AndroidJUnit5Builder")
+
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildFeatures {
