--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,34 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.4.31'
-    ext.koin_version = '2.2.2'
+    ext {
+        projectJvmTarget = JavaVersion.VERSION_1_8
+        kotlinVersion = '1.4.31'
+
+        koinVersion = '2.2.2'
+
+        projectDependencies = [
+                androidGradlePlugin: "com.android.tools.build:gradle:4.1.3",
+                kotlinGradlePlugin : "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion",
+                androidJunit5      : "de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1",
+                staticAnalysis     : [
+                        ktlintGradle: "org.jlleitschuh.gradle:ktlint-gradle:9.4.1",
+                        detekt      : "io.gitlab.arturbosch.detekt:1.15.0"
+                ]
+        ]
+    }
 
     repositories {
         google()
         jcenter()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
+
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5"
+        classpath projectDependencies.androidGradlePlugin
+        classpath projectDependencies.kotlinGradlePlugin
+        classpath projectDependencies.staticAnalysis.ktlintGradle
+        classpath projectDependencies.androidJunit5
         classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
-        classpath "org.jlleitschuh.gradle:ktlint-gradle:9.4.1"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5"
     }
 }
 
@@ -22,12 +36,12 @@ plugins {
     id "io.gitlab.arturbosch.detekt" version "1.15.0"
 }
 
-allprojects {
-    repositories {
-        google()
-        jcenter()
-    }
-}
+//allprojects {
+//    repositories {
+//        google()
+//        jcenter()
+//    }
+//}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
