--- a/example/build.gradle
+++ b/example/build.gradle
@@ -3,6 +3,11 @@ plugins {
     id 'kotlin-android'
 }
 
+repositories {
+    google()
+    jcenter()
+}
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -35,7 +40,7 @@ android {
 dependencies {
     implementation project(':primer-sdk-android')
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
