--- a/config/publish.gradle
+++ b/config/publish.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.github.dcendents.android-maven'
 
 version = libraryVersion
-group = publishedGroupId    // Maven Group ID for the artifact
+group = publishedGroupId
 
 install {
     repositories.mavenInstaller {
@@ -13,18 +13,17 @@ install {
                 groupId publishedGroupId
                 artifactId artifact
 
-                // Add your description here
                 name libraryName
                 description libraryDescription
                 url siteUrl
 
-                // Set your license
                 licenses {
                     license {
                         name licenseName
                         url licenseUrl
                     }
                 }
+
                 developers {
                     developer {
                         id developerId
@@ -32,6 +31,7 @@ install {
                         email developerEmail
                     }
                 }
+
                 scm {
                     connection gitUrl
                     developerConnection gitUrl
@@ -51,7 +51,6 @@ artifacts {
     archives sourcesJar
 }
 
-// Bintray
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
@@ -60,6 +59,7 @@ bintray {
     key = properties.getProperty("bintray.apikey")
 
     configurations = ['archives']
+
     pkg {
         userOrg = userOrganisation
         repo = bintrayRepo
