--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -69,21 +69,22 @@ dependencies {
     implementation "org.koin:koin-core:$koinVersion"
     implementation "org.koin:koin-androidx-scope:$koinVersion"
 
-    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
+    implementation Dependencies.Networking.okhttp
+    implementation Dependencies.Networking.okhttpLoggingInterceptor
 
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation Dependencies.Kotlin.stdlib
+    implementation Dependencies.Kotlin.coroutines
+    implementation AndroidDependencies.coreKtx
+    implementation AndroidDependencies.appCompat
+    implementation AndroidDependencies.material
+    implementation AndroidDependencies.constraintLayout
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    implementation 'androidx.fragment:fragment-ktx:1.3.2'
-    implementation "androidx.core:core-ktx:1.3.2"
+    implementation AndroidDependencies.fragment
+    implementation AndroidDependencies.Lifecycle.liveData
+    implementation AndroidDependencies.Lifecycle.lifecycle
+    implementation AndroidDependencies.Lifecycle.lifecycleExtensions
+    implementation AndroidDependencies.Lifecycle.viewModel
+    implementation AndroidDependencies.Lifecycle.viewModelSavedState
 
     implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC2'
     implementation 'com.hbb20:ccp:2.4.5'
@@ -100,9 +101,9 @@ repositories {
     google()
     jcenter()
     mavenCentral()
-    maven {
-        url "https://kotlin.bintray.com/kotlinx"
-    }
+//    maven {
+//        url "https://kotlin.bintray.com/kotlinx"
+//    }
 }
 
 subprojects {
@@ -110,4 +111,4 @@ subprojects {
 }
 
 apply from: "$rootDir/config/analysis.gradle"
-apply from: 'publish.gradle'
+apply from: "$rootDir/config/publish.gradle"
