--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
     }
 
@@ -32,7 +33,7 @@ buildscript {
 }
 
 plugins {
-    id "io.gitlab.arturbosch.detekt" version "1.15.0"
+    id "io.gitlab.arturbosch.detekt" version "1.16.0"
 }
 
 task clean(type: Delete) {
