--- a/config/publish.gradle
+++ b/config/publish.gradle
@@ -1,3 +1,7 @@
+if (System.getenv()['CI']) {
+    return
+}
+
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.github.dcendents.android-maven'
 
