add gms dependency

--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -86,6 +86,8 @@ dependencies {
     implementation AndroidDependencies.Lifecycle.viewModel
     implementation AndroidDependencies.Lifecycle.viewModelSavedState
 
+    implementation 'com.google.android.gms:play-services-wallet:18.1.2'
+
     implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC2'
     implementation 'com.hbb20:ccp:2.4.5'
 
