--- a/config/dependencies.gradle
+++ b/config/dependencies.gradle
@@ -4,7 +4,7 @@ ext {
     Dependencies = [
             Kotlin    : [
                     stdlib    : "org.jetbrains.kotlin:kotlin-stdlib:${Versions.kotlin}",
-                    coroutines: "org.jetbrains.kotlinx:kotlinx-coroutines-core:${Versions.coroutines}"
+                    coroutines: "org.jetbrains.kotlinx:kotlinx-coroutines-android:${Versions.coroutines}"
             ],
             Networking: [
                     okhttp                  : "com.squareup.okhttp3:okhttp:${Versions.okhttp}",
