--- a/primer-sdk-android/src/main/AndroidManifest.xml
+++ b/primer-sdk-android/src/main/AndroidManifest.xml
@@ -5,6 +5,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application>
+
+        <meta-data
+            android:name="com.google.android.gms.wallet.api.enabled"
+            android:value="true" />
+
         <activity
             android:name=".CheckoutSheetActivity"
             android:label=""
@@ -27,8 +32,8 @@
 
         <activity
             android:name=".WebViewActivity"
-            android:theme="@style/Theme.AppCompat.WebView"
-            android:label=""/>
+            android:label=""
+            android:theme="@style/Theme.AppCompat.WebView" />
     </application>
 
 </manifest>
