--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+//        jcenter()
         mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
     }
