--- a/config/dependencies.gradle
+++ b/config/dependencies.gradle
@@ -3,8 +3,12 @@ apply from: "$rootDir/config/versions.gradle"
 ext {
     Dependencies = [
             Kotlin    : [
-                    stdlib    : "org.jetbrains.kotlin:kotlin-stdlib:${Versions.kotlin}",
-                    coroutines: "org.jetbrains.kotlinx:kotlinx-coroutines-android:${Versions.coroutines}"
+                    stdlib       : "org.jetbrains.kotlin:kotlin-stdlib:${Versions.kotlin}",
+                    coroutines   : "org.jetbrains.kotlinx:kotlinx-coroutines-android:${Versions.coroutines}",
+                    Serialization: [
+                            core: "org.jetbrains.kotlinx:kotlinx-serialization-core:${Versions.kotlinSerialization}",
+                            json: "org.jetbrains.kotlinx:kotlinx-serialization-json:${Versions.kotlinSerialization}"
+                    ]
             ],
             Networking: [
                     okhttp                  : "com.squareup.okhttp3:okhttp:${Versions.okhttp}",
