--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
     repositories {
-        jcenter()
+//        jcenter()
         google()
     }
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlinVersion"
-        classpath "org.koin:koin-gradle-plugin:$koinVersion"
+        classpath "io.insert-koin:koin-gradle-plugin:$koinVersion"
     }
 }
 
@@ -62,12 +62,15 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-core:1.0.1'
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 
-    implementation "org.koin:koin-core:$koinVersion"
-    implementation "org.koin:koin-androidx-scope:$koinVersion"
+    implementation Dependencies.Kotlin.Serialization.core
+    //'org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1'
+    implementation Dependencies.Kotlin.Serialization.json
+    //'org.jetbrains.kotlinx:kotlinx-serialization-core:1.0.1'
+
+    implementation "io.insert-koin:koin-core:$koinVersion"
+    implementation "io.insert-koin:koin-androidx-scope:$koinVersion"
 
     implementation Dependencies.Networking.okhttp
     implementation Dependencies.Networking.okhttpLoggingInterceptor
@@ -86,8 +89,8 @@ dependencies {
     implementation AndroidDependencies.Lifecycle.viewModel
     implementation AndroidDependencies.Lifecycle.viewModelSavedState
 
-    implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC2'
-    implementation 'com.hbb20:ccp:2.4.5'
+    implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC3'
+    implementation 'com.hbb20:ccp:2.5.1'
 
     testImplementation TestDependencies.Kotlin.coroutines
     testImplementation TestDependencies.Android.archCore
@@ -99,7 +102,7 @@ dependencies {
 
 repositories {
     google()
-    jcenter()
+//    jcenter()
     mavenCentral()
 }
 
