--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ kotlin.code.style=official
 #
 GROUP=io.primer
 POM_ARTIFACT_ID=android
-VERSION_NAME='1.0.0-beta.15'
+VERSION_NAME=1.0.0-beta.15
 POM_NAME=android
 POM_DESCRIPTION=Primer SDK for Android
 POM_INCEPTION_YEAR=2021
