--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -49,6 +49,13 @@ ext {
 
 android {
     buildTypes {
+        debug {
+            buildConfigField 'String', 'NAME', "\"value\""
+            manifestPlaceholders = [key: "value"]
+
+            minifyEnabled false
+            debuggable true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
