--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -107,27 +107,5 @@ subprojects {
 }
 
 apply from: "$rootDir/config/analysis.gradle"
-//apply from: "$rootDir/config/publish.gradle"
-apply plugin: "com.vanniktech.maven.publish"
+apply from: "$rootDir/config/publish.gradle"
 
-allprojects {
-    plugins.withId("com.vanniktech.maven.publish") {
-        mavenPublish {
-            sonatypeHost = "S01"
-        }
-    }
-}
-
-task detektProjectBaseline(type: io.gitlab.arturbosch.detekt.DetektCreateBaselineTask) {
-    description = "Overrides current baseline."
-    ignoreFailures.set(true)
-    parallel.set(true)
-    buildUponDefaultConfig.set(true)
-    setSource(files(rootDir))
-    config.setFrom(files("$rootDir/config/detekt/detekt.yml"))
-    baseline.set(file("$rootDir/config/detekt/baseline.xml"))
-    include("**/*.kt")
-    include("**/*.kts")
-    exclude("**/resources/**")
-    exclude("**/build/**")
-}
