--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-#
+# Publishing values (see publish.gradle)
 GROUP=io.primer
 POM_ARTIFACT_ID=android
 VERSION_NAME=1.0.0-beta.15
