--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     repositories {
         mavenCentral()
         google()
+        jcenter() // livedata-testing has not migrated yet, once it does this has to be removed
     }
 
     dependencies {
@@ -22,32 +23,6 @@ apply plugin: 'kotlinx-serialization'
 apply from: "$rootDir/config/android-common.gradle"
 apply from: "$rootDir/config/test-dependencies.gradle"
 
-ext {
-    userOrganisation = 'primer-api'
-
-    bintrayRepo = 'android'
-    bintrayName = 'io.primer.android'
-
-    publishedGroupId = 'io.primer.android'
-    libraryName = 'android'
-    artifact = 'android'
-
-    libraryDescription = 'Primer SDK for Android'
-
-    siteUrl = 'https://github.com/primer-io/primer-sdk-android'
-    gitUrl = 'https://github.com/primer-io/primer-sdk-android.git'
-
-    libraryVersion = '1.0.0-beta.15'
-
-    developerId = 'primer-api'
-    developerName = 'Primer Developers'
-    developerEmail = 'developers@primerapi.com'
-
-    licenseName = 'MIT'
-    licenseUrl = 'https://tldrlegal.com/license/mit-license#fulltext'
-    allLicenses = ["MIT"]
-}
-
 android {
     buildTypes {
         release {
@@ -57,8 +32,7 @@ android {
     }
 
     buildTypes.each {
-        it.buildConfigField 'String', 'SDK_VERSION_STRING', "\"$libraryVersion\""
-        it.resValue 'string', 'SDK_VERSION_STRING', libraryVersion
+        it.buildConfigField 'String', 'SDK_VERSION_STRING', "\"$VERSION_NAME\""
     }
 }
 
