--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,11 @@ buildscript {
         koinVersion = '2.2.2'
 
         projectDependencies = [
-                androidGradlePlugin: "com.android.tools.build:gradle:4.1.3",
+                androidGradlePlugin: 'com.android.tools.build:gradle:4.2.0',
                 kotlinGradlePlugin : "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion",
-                androidJunit5      : "de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1",
+                androidJunit5      : 'de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1',
                 staticAnalysis     : [
-                        ktlintGradle: "org.jlleitschuh.gradle:ktlint-gradle:9.4.1",
+                        ktlintGradle: 'org.jlleitschuh.gradle:ktlint-gradle:9.4.1',
                 ]
         ]
     }
@@ -26,8 +26,8 @@ buildscript {
         classpath projectDependencies.kotlinGradlePlugin
         classpath projectDependencies.staticAnalysis.ktlintGradle
         classpath projectDependencies.androidJunit5
-        classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5'
     }
 }
 
