--- a/config/analysis.gradle
+++ b/config/analysis.gradle
@@ -19,7 +19,7 @@ detekt {
 
     reports {
         html.enabled = true
-        xml.enabled = true
+        xml.enabled = false
         txt.enabled = true
         sarif.enabled = true // https://sarifweb.azurewebsites.net - for integrations with Github
     }
