--- a/primer-sdk-android/src/debug/AndroidManifest.xml
+++ b/primer-sdk-android/src/debug/AndroidManifest.xml
@@ -3,10 +3,15 @@
     package="io.primer.android">
 
     <application>
-
         <activity
             android:name=".DebugActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:label="Debug">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
