--- a/example/build.gradle
+++ b/example/build.gradle
@@ -13,7 +13,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "io.primer.AndroidExampleApp"
+        applicationId "io.primer.sampleapp"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
