--- a/example/build.gradle
+++ b/example/build.gradle
@@ -14,6 +14,7 @@ android {
 
     defaultConfig {
         applicationId "io.primer.sample"
+        applicationIdSuffix ".debug"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 3
@@ -21,7 +22,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        manifestPlaceholders = [appId: applicationId.toLowerCase()]
+        manifestPlaceholders = [
+                appId: applicationId.toLowerCase(),
+                appIdSuffix: applicationIdSuffix.toLowerCase(),
+        ]
     }
 
     buildTypes {
