--- a/example/build.gradle
+++ b/example/build.gradle
@@ -14,7 +14,6 @@ android {
 
     defaultConfig {
         applicationId "io.primer.sample"
-        applicationIdSuffix ".debug"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 3
@@ -22,10 +21,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        manifestPlaceholders = [
-                appId: applicationId.toLowerCase(),
-                appIdSuffix: applicationIdSuffix.toLowerCase(),
-        ]
+        manifestPlaceholders = [ appId: applicationId.toLowerCase() ]
     }
 
     buildTypes {
