--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -29,7 +29,7 @@ android {
             debuggable true
         }
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
