fix silent klarna errors

--- a/primer-sdk-android/src/main/AndroidManifest.xml
+++ b/primer-sdk-android/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity
             android:name=".CheckoutSheetActivity"
             android:label=""
+            android:launchMode="singleTask"
             android:theme="@style/Theme.AppCompat.PrimerUniversalCheckout"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
