Check if 3DS library is loaded and report error before to avoid crashing (#74)
* Check if 3DS library is loaded and report error before to avoid crashing

* Add max heap to unit tests CircleCI

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -53,6 +53,13 @@ android {
     buildFeatures {
         viewBinding true
     }
+    testOptions {
+        unitTests {
+            all {
+                maxHeapSize = "1024m"
+            }
+        }
+    }
 }
 
 dependencies {
