Added JvmStatic and exported tabs (#149)
* Added JvmStatic and exported tabs

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,8 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx1024m -Dfile.encoding=UTF-8
+org.gradle.daemon=false
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -22,7 +23,7 @@ kotlin.code.style=official
 # Publishing values (see publish.gradle)
 GROUP=io.primer
 POM_ARTIFACT_ID=android
-VERSION_NAME=1.5.0
+VERSION_NAME=1.5.1
 POM_NAME=android
 POM_DESCRIPTION=Primer SDK for Android
 POM_INCEPTION_YEAR=2021
