Add field for payment api call with descriptor payload

--- a/gradle.properties
+++ b/gradle.properties
@@ -39,3 +39,6 @@ POM_DEVELOPER_NAME=Primer Developers
 POM_DEVELOPER_URL=https://github.com/primer-io
 
 ARTIFACTORY_3DS_URL=https://primer.jfrog.io/artifactory/primer-android/
+
+PRIMER_ANDROID_ARTIFACTORY_3DS_USERNAME=
+PRIMER_ANDROID_ARTIFACTORY_3DS_PASSWORD=
