--- a/config/versions.gradle
+++ b/config/versions.gradle
@@ -1,17 +1,17 @@
 ext {
     Versions = [
-            androidJunit5TestRunner: "1.2.0",
+            androidJunit5TestRunner: '1.3.0',
             arch                   : "2.1.0",
-            coroutines             : "1.4.2",
-            espresso               : "3.3.0",
-            fragment               : "1.2.5",
-            junit5                 : "5.7.1",
+            coroutines             : "1.6.0",
+            espresso               : '3.4.0',
+            fragment               : '1.4.1',
+            junit5                 : '5.8.2',
             kotlin                 : kotlinVersion,
-            kotlinSerialization    : "1.3.1",
-            lifecycle              : "2.3.1",
-            mockk                  : "1.12.0",
+            kotlinSerialization    : '1.3.2',
+            lifecycle              : '2.4.1',
+            mockk                  : '1.12.3',
             okhttp                 : "3.12.1",
-            xJunitRunner           : "1.1.2",
+            xJunitRunner           : '1.1.3',
             primer3ds              : "1.1.0",
     ]
 }
