Added compiler options to enable default Java method generation (#215)
* Added compiler options to enable default Java method generation

--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -41,6 +41,10 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    kotlinOptions {
+        freeCompilerArgs += '-Xjvm-default=all'
+    }
 }
 
 dependencies {
