--- a/example/build.gradle
+++ b/example/build.gradle
@@ -50,6 +50,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs += '-Xjvm-default=all'
     }
     buildFeatures {
         viewBinding true
