[DEX-2468] Better UX with redirect APMs (#292)
* [DEX-2468] Better UX with redirect APMs

--- a/primer-sdk-android/src/main/AndroidManifest.xml
+++ b/primer-sdk-android/src/main/AndroidManifest.xml
@@ -68,6 +68,10 @@
             android:theme="@style/Theme.AppCompat.WebView" />
 
         <activity
+            android:name=".ui.payment.processor3ds.Processor3dsWebViewActivity"
+            android:label=""
+            android:theme="@style/Theme.AppCompat.WebView" />
+        <activity
             android:name=".ui.deeplink.async.AsyncPaymentMethodDeeplinkActivity"
             android:exported="true"
             android:label=""
