[DEVX-417] Fixed sonar coverage reports (#320)

--- a/config/android-common.gradle
+++ b/config/android-common.gradle
@@ -22,14 +22,14 @@ android {
     kotlinOptions {
         jvmTarget = projectJvmTarget.toString()
     }
-//
-//    testOptions {
-//        execution 'ANDROIDX_TEST_ORCHESTRATOR'
-//
-//        unitTests.all {
-//            useJUnitPlatform() // <--- this is the important part
-//        }
-//    }
+
+    testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+
+        unitTests.all {
+            useJUnitPlatform() // <--- this is the important part
+        }
+    }
 }
 
 apply from: "$rootDir/config/dependencies.gradle"
