--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-wallet:19.1.0'
 
     compileOnly Dependencies.ThreeDs.primer3ds
-    testCompileOnly Dependencies.ThreeDs.primer3ds
+    testImplementation Dependencies.ThreeDs.primer3ds
 
     compileOnly Dependencies.Klarna.primerKlarna
     testImplementation Dependencies.Klarna.primerKlarna
