[CHKT-110] Add first stage implementation for ipay88 flow (#337)
* [CHKT-110] Add first stage implementation for ipay88 flow

* [CHKT-110] Finalized Drop-in part

* [CHKT-110]  Added Headless implementation

Co-authored-by: Semir <semir@primer.io>

--- a/config/dependencies.gradle
+++ b/config/dependencies.gradle
@@ -15,6 +15,9 @@ ext {
             ],
             Klarna    : [
                     primerKlarna: "io.primer:klarna-android:${Versions.primerKlarna}"
+            ],
+            iPay88    : [
+                    primeriPay88: "io.primer:ipay88-android:${Versions.primeriPay88}"
             ]
     ]
 }
