Updated Maven publish plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -39,4 +39,7 @@ POM_DEVELOPER_ID=primer-api
 POM_DEVELOPER_NAME=Primer Developers
 POM_DEVELOPER_URL=https://github.com/primer-io
 
+SONATYPE_HOST=S01
+RELEASE_SIGNING_ENABLED=true
+
 ARTIFACTORY_3DS_URL=https://primer.jfrog.io/artifactory/primer-android/
