--- a/primer-sdk-android/build.gradle
+++ b/primer-sdk-android/build.gradle
@@ -126,7 +126,8 @@ jacocoAndroidUnitTestReport {
     excludes += [
             '**/example/**',
             '**/di/**',
-            '**/ui/**'
+            '**/ui/**',
+            '**/analytics/**',
     ]
 }
 
