Disable Javadoc release generation

--- a/config/publish.gradle
+++ b/config/publish.gradle
@@ -1,4 +1,10 @@
 apply plugin: "com.vanniktech.maven.publish"
 
 allprojects {
+    def excludedTasks = Arrays.asList("javaSourcesJar", "javaDocReleaseGeneration")
+    tasks.whenTaskAdded { task ->
+        if (excludedTasks.stream().any { task.name.contains(it) }) {
+            task.enabled = false
+        }
+    }
 }
